# last-generation-search

./: .gitignore  6063313.txt  README.md  keyword_2025-02-06_18:16:18.451491.json  keyword_2025-02-07_13:48:38.174512.json  keyword_2025-02-13_15:34:24.742840.json  keyword_weekend_2025-02-16_23:00:29.511408.json  pyproject.toml  single_page_results.json  taz_last+generation_merged.json  taz_last+generation_weekend.json
.github/workflows/: ci.yaml
articles/: 2021-09-24T15:38:00_5801100.txt  2021-10-08T18:41:00_5800893.txt  2022-02-12T18:36:00_5831051.txt  2022-02-17T13:39:00_5831060.txt  2022-02-19T18:57:00_5833628.txt  2022-02-26T00:00:00_5835168.txt  2022-02-27T10:09:00_5835112.txt  2022-02-27T10:53:00_5835180.txt  2022-04-23T18:05:00_5848846.txt  2022-04-24T12:01:00_5846789.txt  2022-07-01T14:28:00_5863109.txt  2022-07-09T18:16:00_5863792.txt  2022-07-31T12:09:00_5868476.txt  2022-08-13T00:00:00_5871496.txt  2022-08-13T09:50:00_5871457.txt  2022-08-13T12:53:00_5871450.txt  2022-08-13T19:17:00_5871436.txt  2022-09-04T08:56:00_5876155.txt  2022-09-18T17:44:00_5879306.txt  2022-10-16T15:00:00_5885338.txt  2022-10-28T14:51:00_5890829.txt  2022-10-28T18:16:00_5888557.txt  2022-10-29T16:37:00_5888486.txt  2022-10-29T19:10:00_5888528.txt  2022-10-29T19:10:00_5888542.txt  2022-11-04T17:28:00_5890172.txt  2022-11-04T18:55:00_5892927.txt  2022-11-05T00:00:00_5890101.txt  2022-11-05T00:00:00_5890105.txt  2022-11-05T10:46:00_5890167.txt  2022-11-11T19:01:00_5891802.txt  2022-11-12T00:00:00_5891769.txt  2022-11-13T09:09:00_5891843.txt  2022-11-19T00:00:00_5893480.txt  2022-11-19T00:00:00_5893481.txt  2022-11-25T18:00:00_5895001.txt  2022-11-26T00:00:00_5894936.txt  2022-11-26T00:00:00_5894940.txt  2022-11-26T00:00:00_5894954.txt  2022-11-29T13:49:00_5894338.txt  (+126 more)
src/last_generation_search/: __init__.py
src/last_generation_search/taz/: __init.py
src/letzegensuchen/: __init__.py  utils.py
src/letzegensuchen/taz/: __init__.py
src/letztegensuchen/: __init__.py  config.py  user_agent.py
src/letztegensuchen/taz/: __init__.py  _types.py
src/letztegensuchen/utils/: __init__.py  json.py
src/narrative_futures/: __main__.py  cli.py
tests/: test_example.py
(+5 files in other folders)
