[project]
name = "narrative-futures"
version = "0.1.0"
description = "A python package to scrape article data from several German news publications"
readme = "README.md"
authors = [
    { name = "Robert Adams", email = "r0b4dams@gmail.com" },
    { name = "Kendra Alexander", email = "konumakendra@gmail.com" },
]
requires-python = ">=3.12"
dependencies = ["beautifulsoup4>=4.13.3", "requests>=2.32.3"]

[dependency-groups]
dev = ["pytest>=8.3.4", "ruff>=0.9.5"]

[project.scripts]
nf = "narrative_futures.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
